_sass/_style.scss
/* ... */
body.single-writing {
	main {
		article {
			.item-content {
				p:first-of-type::first-letter {
					font-family: 'Jacques Francois Shadow';
					font-size:6.1rem;
					float:left;
					font-weight:700;
					margin-right:15px;
					margin-bottom:5px;
					//margin-top:10px;
					//color:#fff;
					//background:$color1;
					padding:20px;
					//<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Gravitas+One|IM+Fell+Great+Primer+SC|Jacques+Francois+Shadow|Purple+Purse|Sail" rel="stylesheet"> 

				}
				.jump {
					p:first-of-type::first-letter {
						font-size:inherit;
						font-family:inherit;
						float:none;
						font-weight:inherit;
						margin:0;
						font-size:inherit;
						background:inherit;
						color:inherit;
						padding:inherit;
					}
				}
			}
			
		}
	}
}


ul.tags {
	margin-bottom:12px;
	margin-top:10px;
	li.tag {
		font-family:$sans-serif;
		font-weight:400;
		font-size:.7rem;
		color:$color1-light;
		background:none;
		border:solid 1px $color1-light;
		margin-right:5px;
	}
}

html {
	font-size:18px;
	@media (min-width:1000px) {
		font-size:20px;
	}
}

body {
	color:$color1;
	font-family:$serif;
	font-weight:400;
	line-height:1.5;
	p {
		margin-bottom:.75rem;
	}
	h1, h2, h3 {
		font-family:$sans-serif;
	}
	header {
		@media (min-width:1000px) {
			height:100%;
			width:61px;
			position:fixed;
			background:#fff;
			box-shadow:$shadow1;
			top:0;
			left:0;
		}
		#branding {
			box-shadow:$shadow1;
			background:#fff;
			position:fixed;
			top:0;
			left:0;
			width:100%;
			padding:15px 7px;
			z-index:1000;
			//height:60px;
			@media (min-width:1000px) {
				background:none;
				position:static;
				box-shadow:none;
			}
			h1 {
				margin:0;
				font-family:$brand;
				font-weight:700;
				text-align:center;
				font-size:1.75rem;
				@media (min-width: 1000px) {
					//transform:rotate(90deg);
					//transform-origin: bottom left;
					writing-mode: vertical-rl;
				}
			}
		}
		nav {
			background:#fff;
			box-shadow:$shadow1;
			position:fixed;
			z-index:4;
			bottom:0;
			left:0;
			width:100%;
			height: $nav_height;
			display:flex;
			@media (min-width:1000px) {
				position:absolute;
				bottom:0;
				flex-direction:column;
				height:auto;
				box-shadow:none;

			}
			a.nav-page {
				text-decoration:none;
				display:block;
				background:#fff;
				padding:12px;
				border-right:solid 1px #eee;
				fill:$color1-lightest;
				display:flex;
				align-items:center;
				justify-content:center;
				height:100%;
				@media (min-width:1000px) {
					border-right:none;
					border-top:solid 1px #eee;
					padding-right:15px;
					padding-left:15px;
					padding-top:13px;
					padding-bottom:13px;
				}
				svg {
					width:80%;  
					height:100%;
				}
				p.nav-page-title {
					display:none;
				}	
				&.active {
					fill:$color1;
					border-bottom:solid 2px $color1;
					@media (min-width:1000px) {
						border-bottom:none;
						border-left:solid 2px $color1;
					}
				}
			}		
		}
	}
	#base {
		position:fixed;
		top:0;
		left:0;
		z-index:-1;
		div.base-image {
			width:100vw;
			height:100vh;
			@media (min-width:1000px) {
				background-size:cover !important;
				background-position:center !important;
			}
		}
	}
	main {
		//margin:0 15px;
		padding-bottom:$nav_height;  
	}
	main > * {
		max-width: 1000px;
		@media (min-width: 800px) {
			margin: 0 auto;
		}
	}
}


body#home {
	header {
		nav {
			a.nav-page {
				fill: lighten($color1, 5%);
			}

		}
	}
}

body.internal {
	main {
		background:#fff;
		//padding-left:30px;
		//padding-right:15px;
		padding-top:20px;
		padding-bottom:20px;
		//margin-left:-15px;
		//width:calc(100% + 15px);
		margin-top:60vh;
		box-shadow: $shadow1;
		margin-bottom:54px;
		@media (min-width:1000px) {
			margin-left:64px;
			margin-top:3px;
			max-width:884px;
			padding-top:80px;
			margin-bottom:4px;
		}
		#base {
			.base-image {
				height:60vh;
				background-size: cover !important; //100% auto !important;
				background-position: center 75px !important;
				@media (min-width:1000px) {
					height:100vh;
					background-position:center center !important;
				}
			}
			.base-image-bottom {
				position: fixed;
				bottom:0;
				left:0;
				height:40vh;
				width:100%;
				background-size:cover;
				background-position:center;
				@media (min-width:1000px) {
					display:none;
				}
			}
		}
		section#page-intro {
			margin-bottom:30px;
			border-bottom:solid 1px #eee;
			padding-bottom:8px;
			h2 {
				font-size:1.25rem;
				font-weight:300;
				color:$color1-light;
				margin-bottom:2px;
			}
			p:first-of-type {
				font-size:1.75rem;
				line-height:1.25;
				font-weight:500;
				margin-bottom:25px;
			}
		}
	}
}

section#related {
	margin-bottom:0;
	margin-top:55px;
	//margin-left:13px;
	border-top:solid 1px #ddd;
	padding-top:10px;
	padding-right:10px;
	padding-bottom:10px;
	background:#eee;

	@media (min-width:1000px) {
		//margin-left:65px;
		//margin-top:4px;
	}
	ul {
		display:flex;
		max-width:100%;
		justify-content:flex-end;
		padding:0;
		margin:-3px;
		li.item {
			background:#fff;
			margin-bottom:0;
			//padding:3px;
			//box-shadow:$shadow1;
			margin:3px;
			//border:solid 2px #fff;
			height:40px;
			width:40px;
			overflow:hidden;
			img {
				width:100%;
				height:100%;
				object-fit:cover;
				margin-bottom:0;
				padding-bottom:0;
				opacity:.5;
				transition: opacity .35s;
				&:hover {
					opacity:1;
					transition: opacity .35s;
				}
			}
			.item-text {
				display:none;
			}
		}
	}
}

body[class*=single] {
	main {
		padding-bottom:0;
		margin-bottom:55px;
		@media (min-width:1000px) {
			margin-bottom:4px;
		}
	}
}
/* ... */

